--- a/q1/q1.py.ipynb
+++ b/q1/q1.py.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "d6cee169",
    "metadata": {},
    "outputs": [
@@ -25,22 +25,24 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "arr = np.array([[1, 2], [3, 4]])  #Given array\n",
-    "eig_val, eig_vec = np.linalg.eig(arr)\n",
-    "determinant = int(np.linalg.det(arr))      \n",
-    "#determinant를 직접 계산해볼때, -2가 나오기 때문에 현재 발생하는 소수점 발생을 없애기 위해 int()를 사용했다.\n",
+    "def main():\n",
+    "    arr = np.array([[1, 2], [3, 4]])  # Given array\n",
+    "    eig_val, eig_vec = np.linalg.eig(arr)\n",
+    "    determinant = int(np.linalg.det(arr))\n",
+    "    print(\"Eigenvalues:\")\n",
+    "    print(eig_val)\n",
+    "    print(\"\\nEigenvectors:\")\n",
+    "    print(eig_vec)\n",
+    "    print(\"\\nDeterminant:\")\n",
+    "    print(determinant)\n",
     "\n",
-    "print(\"Eigenvalues:\")\n",
-    "print(eig_val)\n",
-    "print(\"\\nEigenvectors:\")\n",
-    "print(eig_vec)\n",
-    "print(\"\\nDeterminant:\")\n",
-    "print(determinant)"
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "7953ec81",
    "metadata": {},
    "outputs": [
@@ -55,18 +57,19 @@
    ],
    "source": [
     "import numpy as np\n",
-    "\n",
-    "vec1 = np.array([1,2,3])\n",
-    "vec2 = np.array([4,5,6])\n",
-    "\n",
-    "output = np.cross(vec1, vec2)\n",
-    "print(\"Cross Product:\")\n",
-    "print(output)"
+    "def main():\n",
+    "    vec1 = np.array([1,2,3])\n",
+    "    vec2 = np.array([4,5,6])\n",
+    "    output = np.cross(vec1, vec2)\n",
+    "    print(\"Cross Product:\")\n",
+    "    print(output)\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "1cc02be3",
    "metadata": {},
    "outputs": [
@@ -81,13 +84,15 @@
    ],
    "source": [
     "import numpy as np\n",
-    "A = np.array([[1,2,-2],[2,1,-5],[1,-4,1]])\n",
-    "b = np.array([-15,-21,18])\n",
-    "\n",
-    "x = np.linalg.solve(A,b)\n",
-    "\n",
-    "print(\"Solution:\")\n",
-    "print(x)"
+    "def main():\n",
+    "    A = np.array([[1,2,-2],[2,1,-5],[1,-4,1]])\n",
+    "    b = np.array([-15,-21,18])\n",
+    "    x = np.linalg.solve(A,b)\n",
+    "    print(\"Solution:\")\n",
+    "    print(x)\n",
+    "    \n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
    ]
   },
   {
