--- a/q1/q1.py.ipynb
+++ b/q1/q1.py.ipynb
@@ -35,9 +35,9 @@
     "    print(eig_vec)\n",
     "    print(\"\\nDeterminant:\")\n",
     "    print(determinant)\n",
-    "\n",
+    "    \n",
     "if __name__ == \"__main__\":\n",
-    "    main()\n"
+    "    main()"
    ]
   },
   {
@@ -57,12 +57,14 @@
    ],
    "source": [
     "import numpy as np\n",
+    "\n",
     "def main():\n",
     "    vec1 = np.array([1,2,3])\n",
     "    vec2 = np.array([4,5,6])\n",
     "    output = np.cross(vec1, vec2)\n",
     "    print(\"Cross Product:\")\n",
     "    print(output)\n",
+    "    \n",
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
